@@ -102,6 +102,7 @@ typedef gint64 goffset;
 #define G_MINOFFSET	G_MININT64
 #define G_MAXOFFSET	G_MAXINT64
 
+#ifndef _WIN64
 
 #define GPOINTER_TO_INT(p)	((gint)   (p))
 #define GPOINTER_TO_UINT(p)	((guint)  (p))
@@ -109,10 +110,17 @@ typedef gint64 goffset;
 #define GINT_TO_POINTER(i)	((gpointer)  (i))
 #define GUINT_TO_POINTER(u)	((gpointer)  (u))
 
-#ifndef _WIN64
 typedef signed int gintptr;
 typedef unsigned int guintptr;
+
 #else
+
+#define GPOINTER_TO_INT(p)	((gint)  (gint64) (p))
+#define GPOINTER_TO_UINT(p)	((guint) (guint64) (p))
+
+#define GINT_TO_POINTER(i)	((gpointer) (gint64) (i))
+#define GUINT_TO_POINTER(u)	((gpointer) (guint64) (u))
+
 #ifndef _MSC_VER
 typedef signed long long gintptr;
 typedef unsigned long long guintptr;
@@ -120,6 +128,7 @@ typedef unsigned long long guintptr;
 typedef signed __int64 gintptr;
 typedef unsigned __int64 guintptr;
 #endif
+
 #endif
 
 #ifdef NeXT /* @#%@! NeXTStep */
